<resources>
    <string name="app_name">ODS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings Andriola -->
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="txt_button_entrar">Entrar</string>
    <string name="txt_cadastro">Não tem conta? Cadastre-se!</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_dataNascimento">Data de Nascimento</string>
    <string name="hint_cpf">CPF</string>
    <string name="txt_button_cadastrarConta">Cadastrar Conta</string>
    <string name="txt_button_voltar">Voltar</string>
    <string name="txt_button_sair">Sair</string>
    <string name="txt_ajustes">Ajustes</string>
</resources>