<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/azul_escuro"
        tools:context=".LoginActivity">

        <!--Container-->
        <View
            android:id="@+id/containerTop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_view_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--Logo-->
        <ImageView
            android:id="@+id/logoods"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/logoods"
            app:layout_constraintTop_toTopOf="@+id/containerTop"
            app:layout_constraintStart_toStartOf="@+id/containerTop"
            app:layout_constraintEnd_toEndOf="@+id/containerTop"
            app:layout_constraintBottom_toBottomOf="@+id/containerTop"/>

        <!--Input Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/containerTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/azul_escuro"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="18sp"
                android:padding="15dp"
                android:background="@drawable/background_edittext"
                android:drawableEnd="@drawable/ic_email"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Input Senha-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/azul_escuro"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_senha"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="18sp"
                android:padding="15dp"
                android:background="@drawable/background_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Botão Entrar-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_button_entrar"
            android:textAllCaps="false"
            android:padding="15dp"
            android:background="@drawable/background_button_blue"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutSenha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            />

        <!--Botão Sair-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_button_sair"
            android:textAllCaps="false"
            android:padding="15dp"
            android:background="@drawable/background_button_selector"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/btnEntrar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <!--Barra de carregamento-->
        <TextView
            android:id="@+id/txtTelaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:onClick="cadastro"
            android:text="@string/txt_cadastro"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSair" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/txtTelaCadastro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            />

        <!--View Bottom-->
        <View
            android:id="@+id/viewBottom"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/background_view_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>