<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroActivity"
        android:background="@color/azul_escuro">

        <!--Container-->
        <View
            android:id="@+id/containerTop"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/background_view_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--Logo-->
        <ImageView
            android:id="@+id/logoods"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:srcCompat="@drawable/logoods"
            app:layout_constraintTop_toTopOf="@+id/containerTop"
            app:layout_constraintStart_toStartOf="@+id/containerTop"
            app:layout_constraintEnd_toEndOf="@+id/containerTop"
            app:layout_constraintBottom_toBottomOf="@+id/containerTop"/>

        <!--Texto Informações Pessoais-->
        <TextView
            android:id="@+id/txtInformacoesPessoais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/containerTop"
            android:gravity="center"
            android:text="Informações Pessoais"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            />

        <!--Input Nome-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtInformacoesPessoais"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/azul_escuro"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome"
                android:maxLines="1"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/background_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Input Data de Nascimento-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutNome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/azul_escuro"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dataNascimento"
                android:maxLines="1"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/background_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Input CPF-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutDataNascimento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/azul_escuro"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cpf"
                android:maxLines="1"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/background_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Input E-mail-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutCpf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/azul_escuro"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:maxLines="1"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/background_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Input Senha-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/azul_escuro"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_senha"
                android:maxLines="1"
                android:textSize="15sp"
                android:padding="10dp"
                android:background="@drawable/background_edittext"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Botão Cadastrar Conta-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCadastrarConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_button_blue"
            android:enabled="true"
            android:padding="13dp"
            android:text="@string/txt_button_cadastrarConta"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutSenha" />

        <!--Botão Cadastrar Conta-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVoltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_button_selector"
            android:enabled="true"
            android:padding="13dp"
            android:text="@string/txt_button_voltar"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCadastrarConta"/>

        <!--View Bottom-->
        <View
            android:id="@+id/viewBottom"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/background_view_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCadastrarConta" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>